[metadata]
name = bmc_api
version = 2016.12
summary = BMC Provisioning
description-file = 
        README.md
author = Lenovo
classifier = 
        Environment :: OpenStack
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7

[files]
packages = server

[entry_points]
console_scripts = 
        bmc-api = server.cmd.api:main
        bmc-db-setup = server.cmd.db_setup:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
